@@ -45,6 +45,7 @@ Version 1.0.10 (March xxth 2013)
 - Implemented: Adjustment value for barometer sensors
 - Changed: Error log now contains date/time
 - Implemented: Log now includes sensor name (if known)
+- Implemented: Checking for invalid sensor values
 
 Version 1.0.9 (February 17th 2013)
 - Implemented: OWL113 option to display in Ampere/Usage
